@@ -52,7 +52,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/S0097849313001283}
 }
 
-@article{Macklin:2013:PBF:2461912.2461984,
+@article{Macklin:2013:PBF,
  author = {Macklin, Miles and M\"{u}ller, Matthias},
  title = {Position based fluids},
  journal = {ACM Trans. Graph.},
@@ -135,3 +135,24 @@ url = {http://dx.doi.org/10.1111/cgf.12346}
   publisher =  "Eurographics Association",
   location =   "Zurich, Switzerland"
 }
+
+@article{Akinci:2012,
+ author = {Akinci, Nadir and Ihmsen, Markus and Akinci, Gizem and Solenthaler, Barbara and Teschner, Matthias},
+ title = {Versatile Rigid-fluid Coupling for Incompressible SPH},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2012},
+ volume = {31},
+ number = {4},
+ month = jul,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {62:1--62:8},
+ articleno = {62},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2185520.2185558},
+ doi = {10.1145/2185520.2185558},
+ acmid = {2185558},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {fluid simulation, fluid-solid coupling, physically-based animation, smoothed particle hydrodynamics},
+} 
